--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "scripts": {
     "build": "webpack --mode production",
-    "dev": "webpack-dev-server --mode development"
+    "dev:webpack": "webpack-dev-server --mode development",
+    "dev": "netlify dev"
   },
   "keywords": [],
   "author": "",
@@ -29,9 +30,11 @@
     "babel-loader": "^8.2.5",
     "copy-webpack-plugin": "^10.2.4",
     "css-loader": "^6.7.1",
+    "dotenv": "^16.0.1",
     "eslint": "^8.15.0",
     "eslint-plugin-vue": "^8.7.1",
     "html-webpack-plugin": "^5.5.0",
+    "netlify-cli": "^10.3.1",
     "postcss": "^8.4.13",
     "postcss-loader": "^6.2.1",
     "sass": "^1.51.0",
